[project]
version = "0.1"
name = "TerraDataServer"
dependencies = [
    "fastapi >= 0.110.2",
    "uvicorn >= 0.29.0",
    "pydantic >= 2.6.3",
    "jinja2 >= 3.1.4",
    "python-multipart >= 0.0.9"
]
requires-python = ">= 3.12"
readme = "README.md"
description = "A web UI for AEM transport applications."
maintainers = [
  {name = "Willi Kappler", email = "grandor@gmx.de"}
]
authors = [
  {name = "Willi Kappler", email = "grandor@gmx.de"},
]
keywords = ["data", "science", "webserver", "terra"]
license = {text = "MIT License"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12"
]

[project.urls]
Repository = "https://github.com/willi-kappler/AEM_Transport_UI"

